KrokiMockupTool/src/kroki/app/gui/console/KrokiMockupToolCommandSyntaxParser.java
// Generated from KrokiMockupToolCommandSyntax.g4 by ANTLR 4.4

	package kroki.app.gui.console;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KrokiMockupToolCommandSyntaxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, NUMBER=5, LETTER=6, WHITESPACE=7, ELEMENTNAME=8, 
		MAKEPROJECT=9, MAKEPACKAGE=10, MAKESTDPANEL=11, MAKEPARENTCHILDPANEL=12, 
		MAKECOMBOZOOM=13, MAKEHIERARCHY=14, MAKECOMPONENT=15, IN=16, LBRAKET=17, 
		TRUEFALSE=18, ORIENTATIONELEMENT=19, ALIGNMENTELEMENT=20, TEXTFIELDDATATYPE=21, 
		PERSISTENTTYPES=22, DEFAULTVIEWMODES=23, DEFAULTOPERATIONMODES=24, COLON=25, 
		MINUS=26, COMMA=27, COMPONENTS=28, COMMONCOMPONENTATTRIBUTES=29, PANELCOMPONENT=30, 
		TEXTFIELDCOMPOENT=31, TEXTAREACOMPONENT=32, COMBOBOXCOMPONENT=33, CHECKBOXCOMPONENT=34, 
		REPORTCOMPONENT=35, TRANSACTIONCOMPONENT=36, LINKCOMPONENT=37, HIERARCHYCOMPONENT=38, 
		COMBOZOOMCOMPONENT=39;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'\"'", "';'", "'}'", "NUMBER", "LETTER", "WHITESPACE", 
		"ELEMENTNAME", "'make project'", "'make package'", "'make std-panel'", 
		"'make pc-panel'", "'make combozoom'", "'make hierarchy'", "'make component'", 
		"' in \"'", "' {'", "TRUEFALSE", "ORIENTATIONELEMENT", "ALIGNMENTELEMENT", 
		"TEXTFIELDDATATYPE", "PERSISTENTTYPES", "DEFAULTVIEWMODES", "DEFAULTOPERATIONMODES", 
		"':'", "'-'", "','", "COMPONENTS", "COMMONCOMPONENTATTRIBUTES", "PANELCOMPONENT", 
		"TEXTFIELDCOMPOENT", "TEXTAREACOMPONENT", "COMBOBOXCOMPONENT", "CHECKBOXCOMPONENT", 
		"REPORTCOMPONENT", "TRANSACTIONCOMPONENT", "LINKCOMPONENT", "HIERARCHYCOMPONENT", 
		"COMBOZOOMCOMPONENT"
	};
	public static final int
		RULE_makeCommand = 0, RULE_makeProject = 1, RULE_makePackage = 2, RULE_makeStdPanel = 3, 
		RULE_makeComponent = 4, RULE_makeParentChildPanel = 5, RULE_makeCombozoom = 6, 
		RULE_makeHierarchy = 7;
	public static final String[] ruleNames = {
		"makeCommand", "makeProject", "makePackage", "makeStdPanel", "makeComponent", 
		"makeParentChildPanel", "makeCombozoom", "makeHierarchy"
	};

	@Override
	public String getGrammarFileName() { return "KrokiMockupToolCommandSyntax.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KrokiMockupToolCommandSyntaxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MakeCommandContext extends ParserRuleContext {
		public List<MakePackageContext> makePackage() {
			return getRuleContexts(MakePackageContext.class);
		}
		public MakePackageContext makePackage(int i) {
			return getRuleContext(MakePackageContext.class,i);
		}
		public MakeHierarchyContext makeHierarchy(int i) {
			return getRuleContext(MakeHierarchyContext.class,i);
		}
		public List<MakeCombozoomContext> makeCombozoom() {
			return getRuleContexts(MakeCombozoomContext.class);
		}
		public List<MakeStdPanelContext> makeStdPanel() {
			return getRuleContexts(MakeStdPanelContext.class);
		}
		public MakeCombozoomContext makeCombozoom(int i) {
			return getRuleContext(MakeCombozoomContext.class,i);
		}
		public List<MakeProjectContext> makeProject() {
			return getRuleContexts(MakeProjectContext.class);
		}
		public MakeParentChildPanelContext makeParentChildPanel(int i) {
			return getRuleContext(MakeParentChildPanelContext.class,i);
		}
		public MakeProjectContext makeProject(int i) {
			return getRuleContext(MakeProjectContext.class,i);
		}
		public MakeStdPanelContext makeStdPanel(int i) {
			return getRuleContext(MakeStdPanelContext.class,i);
		}
		public MakeComponentContext makeComponent(int i) {
			return getRuleContext(MakeComponentContext.class,i);
		}
		public List<MakeParentChildPanelContext> makeParentChildPanel() {
			return getRuleContexts(MakeParentChildPanelContext.class);
		}
		public List<MakeComponentContext> makeComponent() {
			return getRuleContexts(MakeComponentContext.class);
		}
		public List<MakeHierarchyContext> makeHierarchy() {
			return getRuleContexts(MakeHierarchyContext.class);
		}
		public MakeCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_makeCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).enterMakeCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).exitMakeCommand(this);
		}
	}

	public final MakeCommandContext makeCommand() throws RecognitionException {
		MakeCommandContext _localctx = new MakeCommandContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_makeCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(23);
				switch (_input.LA(1)) {
				case MAKEPROJECT:
					{
					setState(16); makeProject();
					}
					break;
				case MAKEPACKAGE:
					{
					setState(17); makePackage();
					}
					break;
				case MAKESTDPANEL:
					{
					setState(18); makeStdPanel();
					}
					break;
				case MAKEPARENTCHILDPANEL:
					{
					setState(19); makeParentChildPanel();
					}
					break;
				case MAKECOMPONENT:
					{
					setState(20); makeComponent();
					}
					break;
				case MAKECOMBOZOOM:
					{
					setState(21); makeCombozoom();
					}
					break;
				case MAKEHIERARCHY:
					{
					setState(22); makeHierarchy();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(25); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAKEPROJECT) | (1L << MAKEPACKAGE) | (1L << MAKESTDPANEL) | (1L << MAKEPARENTCHILDPANEL) | (1L << MAKECOMBOZOOM) | (1L << MAKEHIERARCHY) | (1L << MAKECOMPONENT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MakeProjectContext extends ParserRuleContext {
		public TerminalNode ELEMENTNAME() { return getToken(KrokiMockupToolCommandSyntaxParser.ELEMENTNAME, 0); }
		public TerminalNode MAKEPROJECT() { return getToken(KrokiMockupToolCommandSyntaxParser.MAKEPROJECT, 0); }
		public MakeProjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_makeProject; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).enterMakeProject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).exitMakeProject(this);
		}
	}

	public final MakeProjectContext makeProject() throws RecognitionException {
		MakeProjectContext _localctx = new MakeProjectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_makeProject);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); match(MAKEPROJECT);
			setState(28); match(T__2);
			setState(29); match(ELEMENTNAME);
			setState(30); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MakePackageContext extends ParserRuleContext {
		public TerminalNode MAKEPACKAGE() { return getToken(KrokiMockupToolCommandSyntaxParser.MAKEPACKAGE, 0); }
		public List<TerminalNode> ELEMENTNAME() { return getTokens(KrokiMockupToolCommandSyntaxParser.ELEMENTNAME); }
		public TerminalNode ELEMENTNAME(int i) {
			return getToken(KrokiMockupToolCommandSyntaxParser.ELEMENTNAME, i);
		}
		public TerminalNode IN() { return getToken(KrokiMockupToolCommandSyntaxParser.IN, 0); }
		public MakePackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_makePackage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).enterMakePackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).exitMakePackage(this);
		}
	}

	public final MakePackageContext makePackage() throws RecognitionException {
		MakePackageContext _localctx = new MakePackageContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_makePackage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32); match(MAKEPACKAGE);
			setState(33); match(T__2);
			setState(34); match(ELEMENTNAME);
			setState(35); match(T__2);
			setState(36); match(IN);
			setState(37); match(ELEMENTNAME);
			setState(45);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(38); match(T__3);
					setState(39); match(ELEMENTNAME);
					}
					}
					setState(44);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(47); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MakeStdPanelContext extends ParserRuleContext {
		public TerminalNode MAKESTDPANEL() { return getToken(KrokiMockupToolCommandSyntaxParser.MAKESTDPANEL, 0); }
		public List<TerminalNode> ELEMENTNAME() { return getTokens(KrokiMockupToolCommandSyntaxParser.ELEMENTNAME); }
		public TerminalNode ELEMENTNAME(int i) {
			return getToken(KrokiMockupToolCommandSyntaxParser.ELEMENTNAME, i);
		}
		public TerminalNode LBRAKET() { return getToken(KrokiMockupToolCommandSyntaxParser.LBRAKET, 0); }
		public TerminalNode COMPONENTS(int i) {
			return getToken(KrokiMockupToolCommandSyntaxParser.COMPONENTS, i);
		}
		public List<TerminalNode> COMPONENTS() { return getTokens(KrokiMockupToolCommandSyntaxParser.COMPONENTS); }
		public TerminalNode IN() { return getToken(KrokiMockupToolCommandSyntaxParser.IN, 0); }
		public MakeStdPanelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_makeStdPanel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).enterMakeStdPanel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).exitMakeStdPanel(this);
		}
	}

	public final MakeStdPanelContext makeStdPanel() throws RecognitionException {
		MakeStdPanelContext _localctx = new MakeStdPanelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_makeStdPanel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); match(MAKESTDPANEL);
			setState(50); match(T__2);
			setState(51); match(ELEMENTNAME);
			setState(52); match(T__2);
			setState(53); match(IN);
			setState(54); match(ELEMENTNAME);
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(55); match(T__3);
				setState(56); match(ELEMENTNAME);
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			{
			setState(61); match(LBRAKET);
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62); match(COMPONENTS);
				setState(64);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(63); match(T__1);
					}
				}

				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMPONENTS );
			setState(70); match(T__0);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MakeComponentContext extends ParserRuleContext {
		public TerminalNode MAKECOMPONENT() { return getToken(KrokiMockupToolCommandSyntaxParser.MAKECOMPONENT, 0); }
		public List<TerminalNode> ELEMENTNAME() { return getTokens(KrokiMockupToolCommandSyntaxParser.ELEMENTNAME); }
		public TerminalNode ELEMENTNAME(int i) {
			return getToken(KrokiMockupToolCommandSyntaxParser.ELEMENTNAME, i);
		}
		public TerminalNode LBRAKET() { return getToken(KrokiMockupToolCommandSyntaxParser.LBRAKET, 0); }
		public TerminalNode COMPONENTS(int i) {
			return getToken(KrokiMockupToolCommandSyntaxParser.COMPONENTS, i);
		}
		public List<TerminalNode> COMPONENTS() { return getTokens(KrokiMockupToolCommandSyntaxParser.COMPONENTS); }
		public TerminalNode IN() { return getToken(KrokiMockupToolCommandSyntaxParser.IN, 0); }
		public MakeComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_makeComponent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).enterMakeComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).exitMakeComponent(this);
		}
	}

	public final MakeComponentContext makeComponent() throws RecognitionException {
		MakeComponentContext _localctx = new MakeComponentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_makeComponent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(MAKECOMPONENT);
			setState(73); match(LBRAKET);
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74); match(COMPONENTS);
				setState(76);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(75); match(T__1);
					}
				}

				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMPONENTS );
			setState(82); match(T__0);
			setState(83); match(IN);
			setState(84); match(ELEMENTNAME);
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85); match(T__3);
				setState(86); match(ELEMENTNAME);
				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MakeParentChildPanelContext extends ParserRuleContext {
		public TerminalNode MAKEPARENTCHILDPANEL() { return getToken(KrokiMockupToolCommandSyntaxParser.MAKEPARENTCHILDPANEL, 0); }
		public List<TerminalNode> HIERARCHYCOMPONENT() { return getTokens(KrokiMockupToolCommandSyntaxParser.HIERARCHYCOMPONENT); }
		public List<TerminalNode> ELEMENTNAME() { return getTokens(KrokiMockupToolCommandSyntaxParser.ELEMENTNAME); }
		public TerminalNode ELEMENTNAME(int i) {
			return getToken(KrokiMockupToolCommandSyntaxParser.ELEMENTNAME, i);
		}
		public TerminalNode LBRAKET() { return getToken(KrokiMockupToolCommandSyntaxParser.LBRAKET, 0); }
		public TerminalNode HIERARCHYCOMPONENT(int i) {
			return getToken(KrokiMockupToolCommandSyntaxParser.HIERARCHYCOMPONENT, i);
		}
		public TerminalNode IN() { return getToken(KrokiMockupToolCommandSyntaxParser.IN, 0); }
		public MakeParentChildPanelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_makeParentChildPanel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).enterMakeParentChildPanel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KrokiMockupToolCommandSyntaxListener ) ((KrokiMockupToolCommandSyntaxListener)listener).exitMakeParentChildPanel(this);
		}
	}

	public final MakeParentChildPanelContext makeParentChildPanel() throws RecognitionException {
		MakeParentChildPanelContext _localctx = new MakeParentChildPanelContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_makeParentChildPanel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); match(MAKEPARENTCHILDPANEL);
			setState(92); match(T__2);
			setState(93); match(ELEMENTNAME);
			setState(94); match(T__2);
			setState(95); match(IN);
			setState(96); match(ELEMENTNAME);
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97); match(T__3);
				setState(98); match(ELEMENTNAME);
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			setState(103); match(T__2);
			setState(114);
			_la = _input.LA(1);
			if (_la==LBRAKET) {
				{
				setState(104); match(LBRAKET);
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(105); match(HIERARCHYCOMPONENT);
					setState(107);
					_la = _input.LA(1);
					if (_la==T__1) {
						{
						setState(106); match(T__1);
						}
					}

					}
					}
					setState(111); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==HIERARCHYCOMPONENT );
				setState(113); match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
